--- a/conf/app.conf
+++ b/conf/app.conf
@@ -2,3 +2,4 @@ appname = zk_view
 httpport = 8080
 runmode = prod
 zkserver = 192.168.250.61:2181;192.168.250.61:2182;192.168.250.61:2183
+auth = {"users":[{"user":"root","pwd":"root"},{"user":"chensy","pwd":"chensy"}]}
