--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,5 +1,7 @@
 appname = zk_view
 httpport = 8080
 runmode = prod
-zkserver = 192.168.250.61:2181;192.168.250.61:2182;192.168.250.61:2183
+zkserver = 192.168.250.178:2181
 auth = {"users":[{"user":"root","pwd":"root"},{"user":"chensy","pwd":"chensy"}]}
+
+sessionon = true
