--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,7 +1,10 @@
 appname = zk_view
 httpport = 8080
 runmode = prod
-zkserver = 192.168.250.178:2181
+#zkserver = 192.168.250.195:2181
+zkserver = 192.168.250.61:2181,192.168.250.61:2182,192.168.250.61:2183
 auth = {"users":[{"user":"root","pwd":"root"},{"user":"chensy","pwd":"chensy"}]}
+
+watchurl = http://127.0.0.1:9193
 
 sessionon = true
