--- a/conf/app.conf
+++ b/conf/app.conf
@@ -2,8 +2,8 @@ appname = zk_view
 httpport = 8080
 runmode = prod
 #zkserver = 192.168.250.195:2181
-zkserver = 192.168.250.61:2181,192.168.250.61:2182,192.168.250.61:2183
-auth = {"users":[{"user":"root","pwd":"root"},{"user":"chensy","pwd":"chensy"}]}
+zkserver = 115.29.195.127:21818
+auth = {"users":[{"user":"root","pwd":"root","path":"/"},{"user":"chensy","pwd":"chensy"}]}
 
 watchurl = http://127.0.0.1:9193
 
