--- a/conf/app.conf
+++ b/conf/app.conf
@@ -2,7 +2,7 @@ appname = zk_view
 httpport = 8080
 runmode = prod
 #zkserver = 192.168.250.195:2181
-zkserver = 115.29.195.127:21818
+zkserver = x.x.x.x:2181
 auth = {"users":[{"user":"root","pwd":"root","path":"/"},{"user":"chensy","pwd":"chensy"}]}
 
 watchurl = http://127.0.0.1:9193
