--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,9 +1,8 @@
 appname = zk_view
 httpport = 8080
-runmode = prod
-#zkserver = 192.168.250.195:2181
-zkserver = x.x.x.x:2181
-auth = {"users":[{"user":"root","pwd":"root","path":"/"},{"user":"chensy","pwd":"chensy"}]}
+runmode = dev
+zkserver = 192.168.250.195:2181
+auth = {"users":[{"user":"root","pwd":"root","path":"/"},{"user":"chensy","pwd":"chensy","path":"/a"}]}
 
 watchurl = http://127.0.0.1:9193
 
